# packageEnv

./: README.md  package_creation_from_github_v0.2.ipynb  pyproject.toml  requirements.txt
test_package/: test_package_file.py
